# ncaa_market

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
data/: README.md
data/raw/odds/: MANIFEST.md
docs/: DATA_DICTIONARY.md  PROJECT_PLAN.md
notebooks/: 00_explore_odds.ipynb  01_cover_rates.ipynb
sql/: 01_schema.sql
src/ncaa_market/: __init__.py  config.py  pipeline.py
src/ncaa_market/analysis/: __init__.py  cover_rates.py
src/ncaa_market/clean/: __init__.py
src/ncaa_market/features/: __init__.py  ats.py
src/ncaa_market/ingest/: __init__.py  odds.py
src/ncaa_market/load/: __init__.py
src/ncaa_market/report/: __init__.py
tests/: test_smoke.py
