[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncaa-market"
version = "0.1.0"
description = "Market-efficiency analysis of NCAA men's basketball betting markets (2007-present)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Johnny Lin" }]
keywords = ["sports-analytics", "market-efficiency", "betting", "ncaa", "business-intelligence"]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pyarrow>=14.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.9",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/ncaa-market"

[project.scripts]
# Lets you run the whole pipeline from the command line after `pip install -e .`
ncaa-pipeline = "ncaa_market.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # pycodestyle, pyflakes, isort, pyupgrade, bugbear

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
